[REDO] [AOT] Missing GC scan of _metaspace_got array containing Klass*

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b159
    • x86
    • linux

        The code which scans _metaspace_got array is commented out:

        #if 0
          // With the marking above, this call doesn't seem to be needed
           got_metadata_do(f);

        Unfortunately called AOTCompiledMethod::metadata_do() does not iterate over all Klass* which could be referenced by AOT code by accessing _metaspace_got array.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: