8173794: [REDO] [AOT] Missing GC scan of _metaspace_got array containing Klass*

Added back _metaspace_got array scan.

Reviewed-by: dlong